--- a/.github/workflows/topic-lda-docker-image.yml
+++ b/.github/workflows/topic-lda-docker-image.yml
@@ -1,43 +1,41 @@
-# This workflow will build a docker image and publish it to the docker repository with the updated codes
-
-name: Build and Push Docker Image
+name: Build a container image and Push to GitHub Container Registry
 
 on:
   push:
-    branches: [ "airbnb-dataset" ] # Trigger workflow when changes are pushed to the airbnb-dataset branch
-  pull_request:
-    branches: [ "airbnb-dataset" ] # Optionally trigger on pull requests
-
-permissions:
-  contents: read
+    branches:
+      - airbnb-dataset  # Trigger workflow on pushes to the airbnb-dataset branch
+  pull_request:  # Optionally trigger on pull requests
+    branches:
+      - airbnb-dataset
 
 jobs:
-  build:
-
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    
-      # Checkout the repository
+      # Step 1: Check out the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up Docker Buildx (enables multi-platform builds)
+      # Step 2: Set up Docker Buildx (for advanced Docker build capabilities)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub
-      - name: Log in to Docker Hub
+      # Step 3: Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Docker Hub username stored as a secret
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Docker Hub password stored as a secret
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build and push the Docker image
-      - name: Build and Push Docker Image
+      # Step 4: Build and push the Docker image
+      - name: Build and Push Docker Image to GHCR
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: Dockerfile
+          file: ./docker-repo/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/lda-topic-modeling-app:latest
+          tags: ghcr.io/${{ github.repository_owner }}/lda-topic-modeling-app:latest
+          #tags: ${{ steps.meta.outputs.tags }}
+          #labels: ${{ steps.meta.outputs.labels }}
